# theorem-prover

./: README.md  generic.cabal  theorem-prover.cabal
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 4ysb7jcv6s03azx4z5r59x0qmmhs7q18-source  60xs78gj9pq73bx3hxamya8x8bjghpxz-source  vwaxayibvij83cwf76yzwdaanp85g3x7-source
app/: Main.hs
src/: CNF.hs  Main.hs  PrettyPrinter.hs  PropLanguage.hs  PropParser.hs
test/: CNFSpec.hs  PropSpec.hs  Spec.hs
